# habit-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  infected_npm_Sha1_Hulud_v2.csv  package-lock.json  package.json  project-plan.md  pyproject.toml  scan_npm_vulnerabilities.py
alembic/: env.py
alembic/versions/: 06b1895615e3_rename_prompts_to_reminders.py  074081318e3a_add_timestamp_and_soft_delete_columns_.py  087e53b0fbf1_initial_schema.py  11cd07b5b675_add_summaries_table.py  3012669045a7_add_stories_table.py  8ec5d21c3589_add_missing_outcome_and_behavior_tables.py  a198b6596716_add_summaries_table.py  cad2f99ab1ba_update_garmin_data_model_with_new_schema.py
evals/: README.md  extraction.yaml  promptfooconfig.yaml  questions.yaml
evals/prompts/: category_detection.txt  question_generation.txt  structured_extraction.txt
src/: __init__.py  celery_app.py  config.py  main.py
src/api/: __init__.py  categories.py  garmin.py  health.py  llm.py  notifications.py  prompts.py  quicklog.py  reminders.py  responses.py  stories.py  summaries.py  users.py
src/models/: __init__.py  behavior.py  calendar_event.py  category.py  correlation.py  garmin_data.py  historical_gap.py  insight.py  mixins.py  outcome.py  prompt.py  story.py  (+4 more)
tests/: __init__.py  conftest.py  test_android_flow.py  test_categories.py  test_celery_tasks.py  test_garmin.py  test_health.py  test_notification_api.py  test_notifications.py  test_prompts.py  test_quicklog.py  test_reminders.py  test_responses.py  test_users.py
web/: next.config.ts  package-lock.json  package.json
(+33 files in other folders)
